[package]
name = "tileproc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tileproc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
glob = "0.3.0"
colored = "2.0.0"
clap = { version = "4.0.10", features = ["derive"] }
